[project]
name = "blackjack-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "stable-baselines3[extra]>=2.6.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "ipykernel>=6.29.5",
]
